# genesis

./: .gitignore  PROJECT_VISION.md  README.md  pyproject.toml
.windsurf/rules/: rules.md
.windsurf/workflows/: add-level.md  add-test.md  create-dataset.md  genesis-start.md  handoff.md  verify-output.md
core/: __init__.py  types.py
core/testing/: __init__.py  harness.py
core/training/: __init__.py  config.py  metrics.py  trainer.py
core/verification/: __init__.py  base.py  syntax.py
docs/: STATUS.md
docs/architecture/: system-design.md
docs/decisions/: ADR-001-project-codename.md  (+6 more)
genesis_datasets/: __init__.py  level0_critical.jsonl
models/: level0_best
notebooks/: finetune_critical.py  finetune_level0_targeted.py  level0_100.py  level0_capstone.py  level0_classifier.py  level0_final.py  train_all_levels_real.py  train_genesis_final.py  train_genesis_honest.py  train_genesis_proper.py  train_genesis_real.py  train_genesis_v2.py  train_genesis_v3.py  train_genesis_v4.py  train_genesis_v5.py  train_genesis_v6.py  train_level0.py  train_level0_colab.ipynb  train_level0_complete.py  train_level0_ultimate.py  train_level0_v2.ipynb  train_level1.py  train_level2.py  train_level2_colab_pro.py
tests/: complete_mnemonic_db.json  exam_level0.py  exam_level1.py  exam_level2.py  external_verify_level0.py  gate_level1.py  mnemonic_database.json  real_world_exam.py  real_world_model_exam.py  strict_real_world_gate.py  test_level1.py  test_level1_property.py  test_level2.py  verify_level0_100_percent.py
tools/: augment_dataset.py  create_balanced_dataset.py  create_balanced_dataset_v2.py  evaluate_level0.py  run_exam.py  run_exam_level1.py  train_level0.py  verify_level2_model.py
(+54 files in other folders)
