[project]
name = "genesis"
version = "0.1.0"
description = "Bottom-up hierarchical code agent trained like a human learns programming"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",           # LoRA fine-tuning
    "datasets>=2.14.0",      # HuggingFace datasets
    "accelerate>=0.24.0",    # Training acceleration
    
    # Code analysis
    "capstone>=5.0.0",       # Disassembly engine
    
    # Testing & Quality
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.90.0",    # Property-based testing
    
    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "rich>=13.0.0",          # Pretty printing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "levels", "tools", "genesis_datasets"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "levels"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
